<resources>
    <string name="app_name">Starfield Live Wallpaper</string>
    <string name="wallpaper_description">Starfield Live Wallpaper</string>
    <string name="dream_description">Starfield Live Wallpaper</string>
    <string name="author">drdwrd</string>
    <string name="settings_activity_title">Settings</string>

    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_never">Never</string>
    <string name="btn_ok">OK</string>

    <string name="dlg_download_texture_title">Notification</string>
    <string name="dlg_download_texture_text">Download optimized textures for default theme?</string>

    <string name="msg_install_in_progress">Installing&#8230;</string>
    <string name="msg_install_failed">Cannot install theme!</string>
    <string name="msg_download_failed">File download failed!</string>
    <string name="msg_theme_load_failed">Cannot load theme!</string>
    <string name="msg_reset_settings">"Resetting settings&#8230;"</string>

    <string name="btn_set_wallpaper">Set Wallpaper</string>
    <string name="btn_set_screensaver">Set Screensaver</string>
    <string name="btn_edit_settings">Settings</string>

    <string name="label_stars_speed">Stars Speed</string>
    <string name="label_stars_density">Stars Density</string>
    <string name="label_clouds_density">Clouds Density</string>
    <string name="label_camera_rotation">Camera Rotation</string>
    <string name="label_parallax_effect_sensitivity">Sensitivity</string>
    <string name="label_parallax_effect_acceleration">Acceleration</string>
    <string name="label_target_framerate">Frame Rate</string>
    <string name="btn_parallax_effect">Parallax Effect</string>
    <string name="btn_adaptive_fps">Adaptive FPS</string>
    <string name="btn_scrolling_effect">Wallpaper Scrolling</string>
    <string name="btn_texture_quality">High Quality Textures</string>
    <string name="btn_override_system_framerate">Override Frame Rate</string>

    <string name="menu_reset">Reset</string>
    <string name="menu_privacy">Privacy</string>

    <string name="dlg_show_privacy_title">Privacy</string>

    <string-array name="list_settings_category">
        <item>Particles</item>
        <item>Camera</item>
        <item>System</item>
    </string-array>
</resources>
