<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <drwdrd.ktdev.starfield.Slider
            android:id="@+id/particleSpeedSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/label_stars_speed"
            app:leftIcon="@drawable/ic_round_arrow_right_24"
            app:rightIcon="@drawable/ic_round_arrow3_right_24"
            app:minValue="0.5"
            app:maxValue="1.5"
            app:stepSize="0.1"
            app:value="1.0"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

        <Switch
                android:id="@+id/adaptiveFPSSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:switchPadding="48dp"
                android:layout_marginStart="8dp"
                android:text="@string/btn_adaptive_fps"
                android:textSize="@dimen/menu_checkbox_text_size"/>

        <drwdrd.ktdev.starfield.Slider
                android:id="@+id/starsSpawnTimeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/label_stars_density"
                app:leftIcon="@drawable/ic_round_stars_24"
                app:rightIcon="@drawable/ic_round_stars2_24"
                app:minValue="0.005"
                app:maxValue="0.15"
                app:stepSize="0.001"
                app:value="0.05"/>

        <drwdrd.ktdev.starfield.Slider
                android:id="@+id/cloudsSpawnTimeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/label_clouds_density"
                app:leftIcon="@drawable/ic_round_clouds_24"
                app:rightIcon="@drawable/ic_round_clouds2_24"
                app:minValue="0.05"
                app:maxValue="1.5"
                app:stepSize="0.01"
                app:value="0.5"/>

    </LinearLayout>

</LinearLayout>
